fixed word wraping in perspective widgets

--- a/pyblish_lite/app.css
+++ b/pyblish_lite/app.css
@@ -412,6 +412,7 @@ QToolButton {
 
 #PerspectiveLabel {
 	background-color: transparent;
+	border: none;
 }
 
 #PerspectiveIndicator {
